--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,6 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <cache-path name="camera_images" path="/" />
     <external-cache-path name="external_camera_images" path="/" />
+    <files-path name="edited_photos" path="edited_photos/" />
+    <files-path name="thumbnails" path="thumbnails/" />
 </paths>
